--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "primeicons": "^5.0.0",
     "primereact": "^8.1.1",
     "react": "^18.2.0",
+    "react-countdown": "^2.3.2",
     "react-dom": "^18.2.0",
     "react-i18next": "^11.17.2",
     "react-redux": "^8.0.2",
